# HTTP-Server

./: .gitignore  CMakeLists.txt  README.md  build.sh  change-compiler.sh  client.c  files.txt  generate-cmakelists.sh  generate-flags.sh  server.c
flags/clang/: debug_flags.txt  sanitizer_flags.txt
flags/clang-16/: analyzer_flags.txt  warning_flags.txt
flags/gcc/: analyzer_flags.txt  debug_flags.txt  sanitizer_flags.txt  warning_flags.txt
include/: server.h
search/: foo.html  index.html  test.html
src/: main.c  server.c
